# aggdisagg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SESSION_HANDOFF_2026-07.md  mkdocs.yml  pyproject.toml  team_onboarding.ipynb
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_disagg.py  compare.py
docs/: api.md  benchmarks.md  examples.md  index.md  quickstart.md  test_plan_100_scenarios.md
examples/: quickstart.py
src/aggdisagg/: B_G_Foods_Capital_Expenditures_monthly_sum_disagg.csv  Kraft_Heinz_Revenue_monthly_sum_disagg.csv  PepsiCo_Quarterly_Revenue_monthly_sum_disagg.csv  __init__.py  api.py  conversion.py  core.py  methods.py
tests/: run_messy_loop.py  test_basic.py  test_simulation.py
tests/data/: bg_foods_capex_quarterly.csv  kraft_heinz_quarterly_revenue.csv  pepsico_quarterly_revenue.csv
