[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "aggdisagg"
version = "1.4.1"
description = "Temporal Aggregation & Disaggregation for Modern Python (Polars-first)"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "aggdisagg Contributors"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "time-series",
    "temporal-disaggregation",
    "temporal-aggregation",
    "frequency-conversion",
    "polars",
    "pandas",
    "econometrics",
]
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
xarray = ["xarray>=2023.0.0"]
plot = ["plotly>=5.0.0"]
sklearn = ["scikit-learn>=1.3.0"]
sktime = ["sktime>=0.25.0"]
statsforecast = ["statsforecast>=1.5.0"]
excel = ["fastexcel>=0.9.0", "openpyxl>=3.1.0"]
all = [
    "aggdisagg[pandas,xarray,plot,sklearn,sktime,statsforecast,excel]",
]

[project.urls]
Homepage = "https://github.com/aggdisagg/aggdisagg"
Repository = "https://github.com/aggdisagg/aggdisagg"
Issues = "https://github.com/aggdisagg/aggdisagg/issues"
Documentation = "https://aggdisagg.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/aggdisagg"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.25.0",
    "pandas>=2.0.0",
    "pandas-stubs",
    "xarray>=2023.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "sktime>=0.25.0",
    "statsforecast>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["aggdisagg"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = "warning"
reportMissingTypeArgument = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalOperand = false
reportArgumentType = false
reportCallIssue = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=aggdisagg --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
]

[tool.coverage.run]
source = ["aggdisagg"]
omit = ["*/tests/*"]
relative_files = true
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise RuntimeError",
    "raise ImportError",
    "return y_high",
    "Call fit first",
    "xarray not installed",
    "pandas needed for xarray",
    "y_high = y_high * np.repeat(factor, m)",
    "if not self._fitted",
    "else:",
    "raise RuntimeError.*Call fit first",
    "return y_high",
    "return y_high",
    "97",
    "414",
    "118",
]

[tool.hatch.envs.default]
dependencies = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
]
